api_rust_loco/tests/models/snapshots/can_find_by_pid@users.snap
---
source: tests/models/users.rs
assertion_line: 125
expression: existing_user
---
Err(
    EntityNotFound,
)
