api_rust_loco/tests/models/snapshots/can_validate_model@users.snap
---
source: tests/models/users.rs
expression: res
---
Err(
    Custom(
        "{\"email\":[{\"code\":\"invalid email\",\"message\":null}],\"name\":[{\"code\":\"length\",\"message\":\"validation.name_min_length\"}]}",
    ),
)
