api_rust_loco/tests/models/snapshots/handle_create_with_password_with_duplicate@users.snap
---
source: tests/models/users.rs
assertion_line: 85
expression: new_user
---
Ok(
    Model {
        id: 1,
        pid: a62a08e4-7f60-4d6c-8700-6b7d9ddaaa92,
        email: "user1@example.com",
        password: "$argon2id$v=19$m=19456,t=2,p=1$VnnAIQYOYKJJ9YPI/AaaYQ$35CjdQbzdBgAWdDH8hHGXdgmTp7B17P2E+aNOnBEuFc",
        api_key: "lo-11fc5e24-430f-4297-bab3-dd64eb1f3489",
        name: "framework",
        reset_token: None,
        reset_sent_at: None,
        email_verification_token: None,
        email_verification_sent_at: None,
        email_verified_at: None,
        magic_link_token: None,
        magic_link_expiration: None,
        created_at: 2026-05-13T04:29:51.395496+00:00,
        updated_at: 2026-05-13T04:29:51.395496+00:00,
    },
)
